--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/AhmxdNYC/GIT-ACP-Shortcut-Extension"
   },
   "icon": "images/icon.ico",
-  "version": "0.7.0",
+  "version": "0.7.5",
   "engines": {
     "vscode": "^1.88.0"
   },
@@ -31,16 +31,23 @@
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "compile": "webpack --mode production"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
     "@types/vscode": "^1.88.0",
     "@vscode/test-cli": "^0.0.8",
     "@vscode/test-electron": "^2.3.9",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.57.0",
-    "typescript": "^5.3.3"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -48,18 +55,3 @@
     "vsce": "^2.15.0"
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
